--- a/src/pug/data.pug
+++ b/src/pug/data.pug
@@ -33,6 +33,7 @@
             type: ''
         },
     ]
+
     const descAbout = `Vang nổ Thăng Long có hương vị đặc trưng của sản phẩm lên men tự nhiên từ hoa quả với độ rượu nhẹ, bọt ga đầy trắng mịn. Vang Nổ thăng long tạo cảm giác hương phấn, êm dịu, vui tươi, sản phẩm được đóng chai dung tích 750ml.Vang nổ Thăng Long có hương vị đặc trưng của sản phẩm lên men tự nhiên từ hoa quả với độ rượu nhẹ, bọt ga đầy trắng mịn.Vang Nổ thăng long tạo cảm giác hương phấn, êm dịu, vui tươi, sản phẩm được đóng chai dung tích 750ml.Vang nổ Thăng Long có hương vị đặc trưng của sản phẩm lên men tự nhiên từ hoa quả với độ rượu nhẹ, bọt ga đầy trắng mịn. Vang Nổ thăng long tạo cảm giác hương phấn, êm dịu, vui tươi, sản phẩm được đóng chai dung tích 750ml...Vang Nổ thăng long tạo cảm giác hương phấn, êm dịu, vui tươi, sản phẩm được đóng chai dung tích 750ml.Vang nổ Thăng Long có hương vị đặc trưng của sản phẩm lên men tự nhiên từ hoa quả với độ rượu nhẹ, bọt ga đầy trắng mịn. Vang Nổ thăng long tạo cảm giác hương phấn, êm dịu, vui tươi, sản phẩm được đóng chai dung tích 750ml...`
     const blogLists = [
         {
@@ -368,3 +369,227 @@
             isEdit: false
         }
     ]
+
+    const categories = [
+        {
+            type: 'Rượu ngoại',
+            items: [
+                {
+                    label: 'Rượu Chivas',
+                    amount: 26
+                },
+                {
+                    label: 'Hàng độc - Rượu độc đáo',
+                    amount: 36
+                },
+                {
+                    label: 'Johnnie Walker',
+                    amount: 46
+                },
+                {
+                    label: 'Rượu Whisky',
+                    amount: 24
+                },
+                {
+                    label: 'Rượu Remy Martin',
+                    amount: 16
+                },
+                {
+                    label: 'Rượu Glenmorangie',
+                    amount: 11
+                },
+                {
+                    label: "Rượu Ballantine's",
+                    amount: 7
+                },
+                {
+                    label: 'Rượu Cognac',
+                    amount: 40
+                },
+                {
+                    label: 'Rượu Vodka',
+                    amount: 93
+                },
+                {
+                    label: 'Rượu Chivas',
+                    amount: 26
+                },
+                {
+                    label: 'Rượu Macallan',
+                    amount: 19
+                },
+                {
+                    label: 'Rượu Brandy',
+                    amount: 62
+                },
+                {
+                    label: 'Rượu Hennessy',
+                    amount: 20
+                },
+                {
+                    label: 'Rượu Gin - Tequila - Liqueur - Rượu mùi',
+                    amount: 36
+                },
+                {
+                    label: 'Rượu Champagne',
+                    amount: 12
+                },
+                {
+                    label: 'Rượu Single malt Scotch whisky',
+                    amount: 47
+                },
+                {
+                    label: 'Rượu Spirits',
+                    amount: 4
+                }
+            ]
+        },
+        {
+            type: 'Rượu vang',
+            items: [
+                {
+                    label: 'Rượu Vang Pháp',
+                    amount: 44
+                },
+                {
+                    label: 'Rượu Vang Úc',
+                    amount: 34
+                },
+                {
+                    label: 'Rượu Vang Mỹ',
+                    amount: 16
+                },
+                {
+                    label: 'Rượu Vang Chile',
+                    amount: 48
+                },
+                {
+                    label: 'Rượu Vang Philip',
+                    amount: 1
+                },
+                {
+                    label: 'Rượu Vang Nam Phi',
+                    amount: 20
+                },
+                {
+                    label: 'Rượu Vang Ý',
+                    amount: 2
+                }
+            ]
+        }
+    ]
+
+    const productList = [
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '1.jpg',
+            price: '330.000',
+            oldPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'hot'
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '2.jpg',
+            price: '370.000',
+            oldPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'new'
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '3.jpg',
+            price: '230.000',
+            oldPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: ''
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '4.jpg',
+            price: '450.000',
+            oldPrice: '630.000',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'sale'
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '5.jpg',
+            price: '330.000',
+            oldPrice: '370.000',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'sale'
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '6.jpg',
+            price: '430.000',
+            oldPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'hot'
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '7.jpg',
+            price: '230.000',
+            oldPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: ''
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '8.jpg',
+            price: '670.000',
+            oldPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'hot'
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '9.jpg',
+            price: '730.000',
+            oldPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'new'
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '10.jpg',
+            price: '330.000',
+            oldPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'hot'
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '11.jpg',
+            price: '330.000',
+            oldPrice: '370.000',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: ''
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '12.jpg',
+            price: '330.000',
+            oldPrice: '370.000',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'sale'
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '13.jpg',
+            price: '330.000',
+            oldPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'hot'
+        },
+        {
+            name: 'Rượu vang Đà Lạt',
+            img: '14.jpg',
+            price: '530.000',
+            oldPrice: '',
+            desc: 'Một hợp chất có trong rượu vang gọi là resverato có khả năng làm tăng tối đa tuổi thọ. Resverato còn có khả năng ngăn chặn mật độ oxy hóa của protein béo.',
+            type: 'hot'
+        }
+    ];
