--- a/src/pug/data.pug
+++ b/src/pug/data.pug
@@ -1,6 +1,6 @@
 -
-    const menu = [{link: "#", name: "Trang chủ"},{link: "/do", name: "Rượu vang đỏ"},{link: "/trang", name: "Rượu trắng"},{link: "#", name: "Champagne"},{link: "#", name: "thông tin"},{link: "#", name: "blog"},{link: "#", name: "liên hệ"}];
-    const headerTops = ["Tài khoản của tôi", "Trạng thái đơn hàng","Danh sách ưu tiên","Giỏ hàng","Đăng nhập", "Đăng xuất"];
+    const menu = [{link: "/", name: "Trang chủ"},{link: "/do", name: "Rượu vang đỏ"},{link: "/trang", name: "Rượu trắng"},{link: "./products.html", name: "Champagne"},{link: "/about.html", name: "thông tin"},{link: "./blog.html", name: "blog"},{link: "./contact.html", name: "liên hệ"}];
+    const headerTops = [{link: "./address.html", name: "Tài khoản của tôi"},{link: "./order.html", name: "Trạng thái đơn hàng"},{link: "#", name: "Danh sách ưu tiên"},{link: "./cart.html", name: "Giỏ hàng"},{link: "./login.html", name: "Đăng nhập"},{link: "./register.html", name: "Đăng kí"}]
     const megaMenu = ["Rượu ngoại", "Rượu chivas", "Hàng độc - Rượu độc đáo", "Johnnie Walker","Rượi Whisky", "Rượu Reny Martin","Rượu Glenmorangie"]
     const albums = [2,3,4,5,6,7,8,9];
     const footerLists1 = ["Thông tin", "về chúng tôi","giao hàng", "cảm nghĩ","chính sách riêng tư"];
