--- a/src/pug/pages/blog.pug
+++ b/src/pug/pages/blog.pug
@@ -18,4 +18,4 @@ block content
                 h1.blog__item-title= item.title
                 p.blog__item-info= `Đăng bởi ${item.author} | ${item.date} | ${item.comments.length} bình luận`
                 p.blog__item-desc= item.desc
-                a(href="#" class="link link--more") Read more
+                a(href="./blogdetail.html" class="link link--more") Read more
