--- a/src/pug/pages/detail.pug
+++ b/src/pug/pages/detail.pug
@@ -46,7 +46,7 @@ block content
             button.info__quantity-decrease -
             input(type="text" class="info__quantity-input" value="1")
             button.info__quantity-increase +
-            a(href="#" class="btn btn--black") Add to cart
+            a(href="./cart.html" class="btn btn--black") Add to cart
           .info__action
             .product__image-action
                 p.action__item
@@ -71,8 +71,6 @@ block content
   section.relate
     .container
       +heading("Sản phẩm liên quan")(class="heading--relate")
-      .newproduct__list
-        each item in [1,2,3,4]
-          +renderProduct(`./assets/images/products/${item}.jpg`,"rượu vang đà lạt", "370.000","450.000",)
+      +carousel("carouselSeller")
 
 
