--- a/src/pug/layout/header.pug
+++ b/src/pug/layout/header.pug
@@ -12,3 +12,4 @@ header(class=`header ${current === '/' ? 'header--home' : ''}`)
             .header__inner-search
                 input(type="text", name="" placeholder="Tìm kiếm ở đây ...")
                 i(class="fas fa-search")
+                span#cartNumbers.badge
