--- a/src/pug/pages/detail.pug
+++ b/src/pug/pages/detail.pug
@@ -46,7 +46,7 @@ block content
             button.info__quantity-decrease -
             input(type="text" class="info__quantity-input" value="1")
             button.info__quantity-increase +
-            a(href="./cart.html" class="btn btn--black") Add to cart
+            a(href="" class="btn btn--black btn--cart") Add to cart
           .info__action
             .product__image-action
                 p.action__item
