--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -25,7 +25,7 @@ block content
               h1 Rượu nho năm 1987
               img(src="./assets/images/v-title.png", alt="v-title")
             h1.content__product-price 300.000đ
-            a(href="#" class="btn btn--black") Add to cart
+            a(href="" class="btn btn--black btn--cart") Add to cart
             p.content__product-desc Một hợp chất có trong rượu vang được gọi là resveratro có khả nsadsadsaddadd
             ul.content__product-time
               li.time__item 334 ngày
